tdf#94395 Show paragraph style line spacing in organizer contains

This patch provides functionality to SvxLineSpacingItem::GetPresentation
and also fixes tdf#126466

Change-Id: I9e0cb042c83c568051061de3467d402ef88cfdf4
Reviewed-on: https://gerrit.libreoffice.org/76069
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>